# rtic-projects

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: main.rs  wiring.rs
