[package]
name = "rtic-luga"
version = "0.1.0"
authors = ["z.bykov.d <z.bykov.d@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }
rtic = { version = "*", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "*", features = ["cortex-m-systick"] }
rtic-sync = "*"
futures = { version = "*", default-features = false, features = [
    "async-await",
] }
fugit = "*"

numtoa = "0.2.4"
# heapless = { version = "0.7.16", features = ["defmt-impl"] }
arrayvec = { version = "*", default-features = false }


ssd1306 = "0.8.1"
embedded-graphics = "0.8.1"

defmt = "*"
defmt-rtt = "*"

[dependencies.stm32f7xx-hal]
git = "https://github.com/stm32-rs/stm32f7xx-hal"
features = ["stm32f767", "rtic", "rt"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
