[package]
name = "rtic-luga"
version = "0.1.0"
authors = ["z.bykov.d <z.bykov.d@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
panic-probe = { version = "0.3.1", features = ["defmt"] }
rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.5.0", features = ["cortex-m-systick"] }
rtic-sync = "1.2.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
fugit = "0.3.7"

numtoa = "0.2.4"
# heapless = { version = "0.7.16", features = ["defmt-impl"] }
arrayvec = { version = "*", default-features = false }


ssd1306 = "0.8.1"
embedded-graphics = "0.8.1"

defmt = "0.3.5"
defmt-rtt = "0.4.0"
nb = { version = "1.1.0" }

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal"
features = ["stm32f103", "medium", "rt"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
